--- a/about.html
+++ b/about.html
@@ -1,46 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>About - Reagan Ochola | Strategic MEL Leader & Data Analytics Specialist</title>
   <meta name="description" content="About Reagan Ochola - Strategic MEL leader with 9+ years designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs across East Africa.">
   <meta name="keywords" content="MEL, Data Analytics, Power BI, SQL, Python, Agriculture, Kenya, East Africa, About, Reagan Ochola">
-
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com " rel="preconnect">
   <link href="https://fonts.gstatic.com " rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital ,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
   <!-- =======================================================
   * Template Name: FolioOne
-  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/  
+  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/
   * Updated: Aug 23 2025 with Bootstrap v5.3.7
   * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/  
+  * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
-
 <body class="about-page">
-
   <header id="header" class="header d-flex align-items-center light-background sticky-top">
     <div class="container position-relative d-flex align-items-center justify-content-between">
-
+      <a href="index.html" class="logo d-flex align-items-center">
+        <span>Reagan Ochola</span>
+      </a>
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -52,30 +46,23 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-
       <div class="header-social-links">
         <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/reagan-ochola-aba10927" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
-
     </div>
   </header>
-
   <main class="main">
-
     <!-- About Section -->
     <section id="about" class="about section">
-
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
         <p>Strategic MEL Leader | Multi-Country Donor Programs | Power BI • SQL • Python • Data Governance | 9+ Years Experience</p>
       </div><!-- End Section Title -->
-
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-
         <!-- Intro -->
     <div class="row align-items-center justify-content-center gy-5 mb-5">
       <div class="col-lg-7 text-center" data-aos="fade-right" data-aos-delay="150">
@@ -88,7 +75,6 @@
           <p>
             Proven expertise in optimizing MEL systems, developing data validation protocols, and mentoring teams to ensure high-quality, adaptive learning across agricultural operations. From designing interactive Power BI dashboards that reduce reporting turnaround by 50% to integrating SQL for real-time agricultural performance analysis, my work ensures leaders make decisions based on accurate, timely, and actionable information.
           </p>
-
           <div class="cta-group">
             <a href="#portfolio" class="btn-ghost">
               View My Work <i class="bi bi-arrow-up-right"></i>
@@ -101,7 +87,6 @@
       </div>
     </div>
 <!-- End Intro -->
-
         <!-- Skills Grid -->
         <div class="mb-5">
           <div class="row g-4">
@@ -136,7 +121,6 @@
           </div>
         </div>
         <!-- End Skills Grid -->
-
         <!-- Journey Timeline -->
         <div class="mb-5">
           <div class="row g-4">
@@ -175,13 +159,11 @@
           </div>
         </div>
         <!-- End Journey Timeline -->
-
         <!-- Quote -->
         <blockquote class="personal-quote text-center mb-5" data-aos="fade-down" data-aos-delay="200">
           <p>"Building robust data systems that transform complex agricultural information into evidence-based decisions for sustainable development impact."</p>
         </blockquote>
         <!-- End Quote -->
-
         <!-- Fun Facts -->
         <div class="row g-3 justify-content-center">
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="120">
@@ -210,24 +192,17 @@
           </div>
         </div>
         <!-- End Fun Facts -->
-
       </div>
-
     </section><!-- /About Section -->
-
     <!-- Skills Section -->
     <section id="skills" class="skills section">
-
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
         <p>MERL & Program Architecture • Data Governance • Power BI • SQL • Python • Tableau • Statistical Analysis • Adaptive Management</p>
       </div><!-- End Section Title -->
-
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-
         <div class="row g-4 skills-animation">
-
           <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
             <div class="skill-box">
               <h3>Power BI</h3>
@@ -238,7 +213,6 @@
               </div>
             </div>
           </div>
-
           <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="200">
             <div class="skill-box">
               <h3>SQL</h3>
@@ -249,7 +223,6 @@
               </div>
             </div>
           </div>
-
           <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
             <div class="skill-box">
               <h3>Data Governance</h3>
@@ -260,7 +233,6 @@
               </div>
             </div>
           </div>
-
           <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="400">
             <div class="skill-box">
               <h3>Python</h3>
@@ -272,56 +244,40 @@
               </div>
             </div>
           </div>
-
         </div>
-
       </div>
-
     </section><!-- /Skills Section -->
-
     <!-- Stats Section -->
     <section id="stats" class="stats section dark-background">
-
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-
         <div class="row align-items-center">
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
-          </div>
-
-          <div class="col-lg-8">
+          <div class="col-lg-12">
             <div class="row counters">
               <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                 <h2><span data-purecounter-start="0" data-purecounter-end="9" data-purecounter-duration="1" class="purecounter"></span>+</h2>
                 <p>Years MEL Experience</p>
               </div>
-
               <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
                 <h2><span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="1" class="purecounter"></span>+</h2>
                 <p>MEL Officers Supervised</p>
               </div>
-
               <div class="col-md-4" data-aos="fade-up" data-aos-delay="500">
-                <h2><span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span></h2>
+                <h2><span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span></h2>
                 <p>Countries Covered</p>
               </div>
             </div>
           </div>
         </div>
       </div>
-
     </section><!-- /Stats Section -->
-
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials section">
-
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Testimonials</h2>
         <p>Evidence of impact from multi-country agricultural programs and donor-funded initiatives</p>
       </div><!-- End Section Title -->
-
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-
         <div class="swiper init-swiper">
           <script type="application/json" class="swiper-config">
             {
@@ -339,7 +295,6 @@
             }
           </script>
           <div class="swiper-wrapper">
-
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <div class="row gy-4 justify-content-center">
@@ -360,7 +315,6 @@
                 </div>
               </div>
             </div><!-- End testimonial item -->
-
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <div class="row gy-4 justify-content-center">
@@ -381,7 +335,6 @@
                 </div>
               </div>
             </div><!-- End testimonial item -->
-
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <div class="row gy-4 justify-content-center">
@@ -402,19 +355,13 @@
                 </div>
               </div>
             </div><!-- End testimonial item -->
-
           </div>
           <div class="swiper-pagination"></div>
         </div>
-
       </div>
-
     </section><!-- /Testimonials Section -->
-
   </main>
-
   <footer id="footer" class="footer">
-
     <div class="container">
       <div class="copyright text-center ">
         <p>© <span>Copyright</span> <strong class="px-1 sitename">FolioOne</strong> <span>All Rights Reserved<br></span></p>
@@ -428,20 +375,16 @@
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/  -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
         Designed by <a href="https://bootstrapmade.com/ ">BootstrapMade</a>
       </div>
     </div>
-
   </footer>
-
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
   <!-- Preloader -->
   <div id="preloader"></div>
-
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
@@ -453,10 +396,7 @@
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
-
 </body>
-
 </html>
